--- a/titbit-service/pom.xml
+++ b/titbit-service/pom.xml
@@ -38,6 +38,10 @@
             <artifactId>spring-session</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
