--- a/titbit-service/pom.xml
+++ b/titbit-service/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <docker.image.prefix>slyak</docker.image.prefix>
+        <kotlin.version>1.0.6</kotlin.version>
         <txtmark.version>0.13</txtmark.version>
     </properties>
 
@@ -60,6 +61,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -95,6 +102,20 @@
                         </resource>
                     </resources>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlin.version}</version>
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
