--- a/titbit-service/src/main/resources/application.properties
+++ b/titbit-service/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.show-sql=true
 #database
 spring.datasource.url=jdbc:mysql://localhost:3307/titbit?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&tinyInt1isBit=false&allowMultiQueries=true
 spring.datasource.platform=mysql
-spring.datasource.username=
+spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.continue-on-error=true
