--- a/titbit-service/pom.xml
+++ b/titbit-service/pom.xml
@@ -18,6 +18,7 @@
         <docker.image.prefix>slyak</docker.image.prefix>
         <kotlin.version>1.0.6</kotlin.version>
         <txtmark.version>0.13</txtmark.version>
+        <start-class>com.slyak.TitbitApplication</start-class>
     </properties>
 
     <dependencies>
@@ -31,33 +32,49 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-reactivestreams</artifactId>
+        </dependency>
+        <!--<dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.session</groupId>
-            <artifactId>spring-session</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.session</groupId>
-            <artifactId>spring-session-data-redis</artifactId>
-        </dependency>
+        </dependency>-->
+        <!-- <dependency>
+             <groupId>org.springframework.session</groupId>
+             <artifactId>spring-session</artifactId>
+         </dependency>
+         <dependency>
+             <groupId>org.springframework.session</groupId>
+             <artifactId>spring-session-data-mongo</artifactId>
+         </dependency>-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+        <!-- <dependency>
+             <groupId>mysql</groupId>
+             <artifactId>mysql-connector-java</artifactId>
+             <scope>runtime</scope>
+         </dependency>-->
         <!--spring boot web reactive-->
         <dependency>
             <groupId>org.springframework.boot.experimental</groupId>
             <artifactId>spring-boot-starter-web-reactive</artifactId>
+            <exclusions>
+                <!-- Excluded because we will be using netty -->
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>io.projectreactor.ipc</groupId>
+            <artifactId>reactor-netty</artifactId>
         </dependency>
 
         <dependency>
