--- a/titbit-service/pom.xml
+++ b/titbit-service/pom.xml
@@ -16,7 +16,8 @@
 
     <properties>
         <docker.image.prefix>slyak</docker.image.prefix>
-        <kotlin.version>1.0.6</kotlin.version>
+        <kotlin.version>1.1.0</kotlin.version>
+        <docker.registry>docker.slyak.com</docker.registry>
         <txtmark.version>0.13</txtmark.version>
         <start-class>com.slyak.TitbitApplication</start-class>
     </properties>
@@ -60,9 +61,10 @@
              <scope>runtime</scope>
          </dependency>-->
         <!--spring boot web reactive-->
+        <!--org.springframework.boot:spring-boot-starter-webflux-->
         <dependency>
-            <groupId>org.springframework.boot.experimental</groupId>
-            <artifactId>spring-boot-starter-web-reactive</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
             <exclusions>
                 <!-- Excluded because we will be using netty -->
                 <exclusion>
@@ -111,29 +113,44 @@
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
-                <version>0.4.3</version>
+                <version>0.4.11</version>
                 <configuration>
-                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-                    <dockerDirectory>src/main/docker</dockerDirectory>
+                    <imageName>${docker.registry}/${project.artifactId}</imageName>
+                    <!--<dockerDirectory>src/main/docker</dockerDirectory>-->
+                    <baseImage>java:8</baseImage>
+                    <!-- <env>
+                         <JAVA_OPTS>""</JAVA_OPTS>
+                     </env>-->
+                    <entryPoint>java -Djava.security.egd=file:/dev/./urandom -jar /${project.build.finalName}.jar
+                    </entryPoint>
                     <resources>
                         <resource>
-                            <targetPath>/</targetPath>
+                            <!--<targetPath>/</targetPath>-->
                             <directory>${project.build.directory}</directory>
                             <include>${project.build.finalName}.jar</include>
                         </resource>
                     </resources>
+                    <imageTags>
+                        <imageTag>${project.version}</imageTag>
+                        <imageTag>latest</imageTag>
+                    </imageTags>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
+                <groupId>org.jetbrains.kotlin</groupId>
                 <version>${kotlin.version}</version>
                 <executions>
                     <execution>
                         <id>compile</id>
-                        <phase>process-sources</phase>
                         <goals>
                             <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>test-compile</id>
+                        <goals>
+                            <goal>test-compile</goal>
                         </goals>
                     </execution>
                 </executions>
