--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.BUILD-SNAPSHOT</version>
+        <groupId>com.slyak</groupId>
+        <artifactId>slyak-parent</artifactId>
+        <version>1.2.0-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -16,7 +16,6 @@
     </properties>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.slyak</groupId>
     <artifactId>titbit</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
