--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.slyak</groupId>
         <artifactId>slyak-parent</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
