--- a/titbit-service/src/main/resources/application.properties
+++ b/titbit-service/src/main/resources/application.properties
@@ -1,25 +1,21 @@
 spring.application.name=titbit
 server.port=8080
 
-spring.resources.chain.strategy.content.enabled=true
-spring.resources.chain.strategy.content.paths=/**
+#spring.resources.chain.strategy.content.enabled=true
+#spring.resources.chain.strategy.content.paths=/**
 
 #jpa
 #create/update/none
-#spring.jpa.database=mysql
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
-#spring.jpa.open-in-view=true
-#spring.jpa.show-sql=true
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+spring.jpa.open-in-view=true
+spring.jpa.show-sql=true
 
 #database
-#spring.datasource.url=jdbc:mysql://localhost:3307/titbit?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&tinyInt1isBit=false&allowMultiQueries=true
-#spring.datasource.platform=mysql
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.continue-on-error=true
-
-#mongo
-spring.data.mongodb.uri=mongodb://192.168.30.254:27017
-spring.data.mongodb.database=titbit
+spring.datasource.url=jdbc:mysql://192.168.230.8:3307/titbit?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&tinyInt1isBit=false&allowMultiQueries=true
+spring.datasource.platform=mysql
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.continue-on-error=true
